sandbox/output
Patient.java:8: error: cannot find symbol
        if (this.clashingMedicines.size() == 1) {
                ^
  symbol: variable clashingMedicines
1 error
